card animation cypress test added, screen flicker resolved

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,9 +24,75 @@
     color: var(--dark-mode-anti-theme);
 }
 
+@keyframes reduceMargin {
+    from {
+        margin-bottom: 148px;
+    }
+    to {
+        margin-bottom: 0px;
+    }
+}
+
+.screen_height_delay {
+    animation: reduceMargin 0.8s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
 .card {
     border: 0px solid rgba(0, 0, 0, 0.125);
     box-shadow: 0 0 10px rgba(216, 216, 216, 0.6);
+}
+
+.card-fade {
+    opacity: 0;
+}
+
+.card-hidden {
+    display: none;
+}
+
+.fade-out {
+    animation: fadeOutAndSlideRight 1s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+@keyframes fadeOutAndSlideRight {
+    from {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+    to {
+        opacity: 0;
+        transform: translateX(200px);
+    }
+}
+
+.move-up-animation {
+    animation: moveUp 0.6s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+@keyframes moveUp {
+    from {
+        transform: translateY(144px);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+.move-up-multiple-animation {
+    animation: moveUpMultiple 0.8s cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+@keyframes moveUpMultiple {
+    from {
+        transform: translateY(144px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0px);
+        opacity: 1;
+    }
 }
 
 .card-header {
@@ -99,6 +165,9 @@
     flex: 0 0 30%;
     margin-right: 3rem;
     /*padding-right: 25px;*/
+    overflow-x: hidden;
+    overflow-y: visible;
+    padding: 5px;
 }
 
 .template-marking-span {
@@ -303,6 +372,7 @@
     font-weight: bold;
     transition: all 0.1s;
 }
+
 .marking-unfocus {
     border-radius: 4px;
     padding-top: 3px;
@@ -349,6 +419,7 @@
 .bi-arrow-left {
     padding-right: 0.5rem;
 }
+
 .suggestions-header {
     cursor: pointer;
 }
